[package]
name = "music"
version = "0.1.0"
authors = ["deciduously <ben@deciduously.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

lazy_static = "1.4"
rodio = "0.10"
structopt = "0.3"

[dependencies.rand]

features = [ "small_rng" ]
version = "0.7"

[dev-dependencies]

pretty_assertions = "0.6"