[package]
name = "music"
version = "0.1.0"
authors = ["deciduously <ben@deciduously.com>"]
edition = "2021"

[dependencies]

rodio = "0.17"

[dependencies.clap]

features = ["derive", "env"]
version = "4"

[dependencies.rand]

features = [ "small_rng" ]
version = "0.8"

[dev-dependencies]

pretty_assertions = "1.4"